// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message SequenceMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string create_on = 1;
  string update_on = 2;
  optional string comment = 3;

  // reserved: start is not used and is removed.
  //  uint64 start = 4;
  reserved 4;

  int64 step = 5;
  uint64 current = 6;
}
